"Path tracing tile" starts at 0 instead of 1 #52574

Closed
opened 2017-08-29 05:10:48 +02:00 by Danijel Boskovic · 15 comments

Small issue, when rendering in official RC2 (7b397cd), where it says path tracing tile it seems it says which ones are done, not which one it's working on. I think it makes more sense that it says which one is rendering right now, like it always did.

Small issue, when rendering in official RC2 (7b397cd), where it says path tracing tile it seems it says which ones are done, not which one it's working on. I think it makes more sense that it says which one is rendering right now, like it always did.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DBTessel

Added subscriber: @DBTessel

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Duplicate of #51435 -- I agree it should be changed but it has been ruled invalid :(

Duplicate of #51435 -- I agree it should be changed but it has been ruled invalid :(

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

I replied in the other report as well.
And yeah, I also think it should be changed. It might not be a code bug, but a grammar bug it definitely is. For instance it says it is working on tile 11 from 12, when it is actually working on tile 12 from 12. A bit confusing for the user.

I replied in the other report as well. And yeah, I also think it should be changed. It might not be a code bug, but a grammar bug it definitely is. For instance it says it is working on tile 11 from 12, when it is actually working on tile 12 from 12. A bit confusing for the user.

Added subscribers: @LukasStockner, @mont29

Added subscribers: @LukasStockner, @mont29
Lukas Stockner was assigned by Bastien Montagne 2017-08-30 17:37:12 +02:00

@LukasStockner looks like you'll need to tweak the message at least here. But agree with others here, we developers are used to have 10 items with indices from 0 to 9, but this is absolutely counter-intuitive for normal people! First tile should be number 1, not number 0.

@LukasStockner looks like you'll need to tweak the message at least here. But agree with others here, we developers are used to have 10 items with indices from 0 to 9, but this is **absolutely** counter-intuitive for normal people! First tile should be number 1, not number 0.
Member

I agree that the message is misleading, but a simple +1 is not really the correct answer. The number that's currently displayed is the number of finished tiles, so it actually makes sense that it starts as 0. Just doing a +1 is wrong since there will be multiple tiles active at once.

So, my suggestion would be to change "Path Tracing Tile 0/50" to "Path Tracing, 0/50 tiles finished, 8 active". Sounds good for everybody?

I agree that the message is misleading, but a simple +1 is not really the correct answer. The number that's currently displayed is the number of *finished tiles*, so it actually makes sense that it starts as 0. Just doing a +1 is wrong since there will be multiple tiles active at once. So, my suggestion would be to change "Path Tracing Tile 0/50" to "Path Tracing, 0/50 tiles finished, 8 active". Sounds good for everybody?

Added subscriber: @brecht

Added subscriber: @brecht

I'd use something short like "Rendered 0/50 Tiles", don't think we need to mention how many tiles are active.

I'd use something short like "Rendered 0/50 Tiles", don't think we need to mention how many tiles are active.

Yeah, just displaying the finished tiles is totally fine. @brecht's solution takes up even less space in the interface! Win-win! :)

Yeah, just displaying the finished tiles is totally fine. @brecht's solution takes up even less space in the interface! Win-win! :)

This issue was referenced by blender/cycles@7702640e74

This issue was referenced by blender/cycles@7702640e74adba1acf8980ebad374b414bfdbb54

This issue was referenced by 2a36ee16c1

This issue was referenced by 2a36ee16c105f45cf57d25acc8ad4c1e737b3724

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52574
No description provided.