Fix T52574: make Cycles rendered tile counter more clear.

Differential Revision: https://developer.blender.org/D2853